<resources>
    <string name="main_greeting_title">Androchat</string>

    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="login_button_text">Войти</string>
    <string name="application_about_button_text">О приложении</string>
    <string name="activity_about_developer_name">Соловьев Антон Андреевич</string>
    <string name="activite_about_developer_field">Разработчик</string>
    <string name="activity_about_version_field">Версия приложения</string>
    <string name="activity_about_version">v1.0</string>


    <string name="user_login">Some login</string>

    <string name="menu_dialogs">Диалоги</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_about">О приложении</string>
    <string name="menu_exit">Выход</string>
    <string name="chatName">Имя чата</string>
    <string name="chatDescription">Описание</string>
</resources>
